# universe

ideas/go/: main.go
ideas/opencv/: CMakeLists.txt  DisplayImage.cpp  Hello.cpp  Number.cpp  image_operate.cpp  rflags.php  run.sh
ideas/procpp/event_manager/: CMakeLists.txt  Client.cpp  Client.h  ClientServer.cpp  ClientServer.h  EventHook.hpp  EventManager.cpp  EventManager.h  HttpClientServer.cpp  HttpClientServer.h  Makefile  ProcessPool.h  Protocol.cpp  Protocol.h  ReactHandler.h  Scheduler.cpp  Server.cpp  Server.h  ShmAllocator.h  StreamReader.cpp  StreamReader.h  ThreadPool.cpp  UProtocol.h  UProtocol.hpp  Utils.cpp  Utils.h  allocator.cpp  build.sh  pool.cpp  rflags.php  server.cpp  socks.cpp  test.cpp  test.php
ideas/procpp/event_manager/Allocator/: ObjectTraits.h  ShmAllocPolicy.h
ideas/procpp/event_manager/Dispatch/: IBaseWorker.cpp  IBaseWorker.h  ProcessWorker.cpp  ProcessWorker.h  ProcessWorker.hpp  ProxyWorker.cpp  ProxyWorker.h  RemoteWorker.h
ideas/procpp/event_manager/Log/: ErrorHandler.cpp  ErrorHandler.h
ideas/procpp/event_manager/Memory/: SharedMemory.cpp  SharedMemory.h
ideas/procpp/event_manager/Protocol/: EasyP2P.cpp  EasyP2P.h  Echo.cpp  Echo.h  Http.cpp  Http.h  Socks.cpp  Socks.h
ideas/procpp/event_manager/Protocol/Client/: EasyP2P.h
ideas/procpp/event_manager/Server/Protocol/: Global.cpp  Global.h
ideas/procpp/event_manager/StateMachine/: Bufferable.cpp  Bufferable.h  StateBuffer.h  StateBuffer.hpp
ideas/procpp/event_manager/UProtocol/: Echo.cpp  Echo.h
ideas/procpp/event_manager/bison/: Ast.js  Common.js  Field.js  Generator.js  IStructCodec.h  Makefile  ast.h  design.jison  design.js  design.l  design.lex.cpp  design.tab.c  design.tab.cpp  design.tab.h  design.txt  design.ypp
ideas/procpp/event_manager/bison/templates/: StructCodec.cpp  StructCodec.h  record.cpp
ideas/procpp/event_manager/jison/: Generator.js  Message.h  StringStream.h  design.jison  design.js  design.txt
ideas/procpp/event_manager/swig/: ReactHandler.i
ideas/procpp/event_manager/tests/: easyp2p.cpp  event_hook.cpp  http.cpp  server.cpp  socks.cpp  test.php  test.py  udp_server.cpp  unix_server.cpp
ideas/procpp/mixin_handler/: CMakeLists.txt  Client.cpp  Client.h  ClientServer.cpp  ClientServer.h  DispatcherClientServer.h  DispatcherClientServer.hpp  EventHook.hpp  EventManager.cpp  EventManager.h  HttpClientServer.cpp  HttpClientServer.h  HttpGatewayClientServer.cpp  HttpGatewayClientServer.h  Makefile  Protocol.cpp  Protocol.h  Protocol.hpp  README.md  ReactHandler.h  SSLConnection.cpp  SSLConnection.h  Scheduler.cpp  Scheduler.h  Server.cpp  Server.h  SoaClientServer.cpp  SoaClientServer.h  SocksClientServer.cpp  SocksClientServer.h  StreamReader.cpp  StreamReader.h  StreamReader.hpp  TODO.txt  ThreadPool.cpp  ThreadPool.h  UProtocol.h  Utils.cpp  Utils.h  WebSocketClientServer.cpp  (+4 more)
ideas/procpp/mixin_handler/Allocator/: ShmAllocator.h
ideas/procpp/mixin_handler/Client/: Base.cpp  Base.h  Redis.cpp  Redis.h  Soa.cpp  Soa.h
ideas/procpp/mixin_handler/Codec/: Base64.cpp  Base64.h  Json.cpp  Json.h  Utf16.cpp  Utf16.h  Utf16.hpp  Utf8.cpp  Utf8.h
ideas/procpp/mixin_handler/DataStructure/: Trie.cpp  Trie.h
ideas/procpp/mixin_handler/Dispatch/: Dispatcher.h  Dispatcher.hpp  IBaseWorker.h  ProcessSessionWorker.h  ProcessSessionWorker.hpp  ProcessWorker.cpp  ProcessWorker.h  ProcessWorker.hpp  ProxyWorker.cpp  ProxyWorker.h  RemoteWorker.cpp
ideas/procpp/mixin_handler/Log/: ErrorHandler.cpp  ErrorHandler.h
ideas/procpp/mixin_handler/Memory/: SharedMemory.cpp  SharedMemory.h
ideas/procpp/mixin_handler/Protocol/: EasyP2P.cpp  EasyP2P.h  Echo.cpp  Echo.h  Http.cpp  Http.h  HttpGateway.cpp  HttpGateway.h  ITunnelLike.cpp  ITunnelLike.h  Proxy.cpp  Proxy.h  Remote.cpp  Remote.h  Soa.cpp  Soa.h  SoaProxy.cpp  SoaProxy.h  Socks.cpp  Socks.h  WebSocket.cpp  WebSocket.h
ideas/procpp/mixin_handler/Protocol/Client/: Base.h  EasyP2P.h  Redis.cpp  Redis.h  Redis.hpp  Soa.cpp  Soa.h  Soa.hpp
ideas/procpp/mixin_handler/Server/Protocol/: Global.cpp  Global.h
ideas/procpp/mixin_handler/StateMachine/: Bufferable.cpp  Bufferable.h  StateBuffer.h  StateBuffer.hpp  Stateful.h  Stateful.hpp
ideas/procpp/mixin_handler/UProtocol/: Echo.cpp  Echo.h
ideas/procpp/mixin_handler/bison/: Ast.js  Common.js  Field.js  Generator.js  IStructCodec.h  Makefile  design.jison  design.js  design.txt
ideas/procpp/mixin_handler/bison/templates/: StructCodec.cpp  StructCodec.h  field.cpp  record.cpp
ideas/procpp/mixin_handler/framework/php/: cli.php  composer.json  index.php  init.php
ideas/procpp/mixin_handler/framework/php/bootstrap/: init.php
ideas/procpp/mixin_handler/framework/php/cli/: http.php  http_gateway.php  http_gateway_api.php  http_gateway_wall.php  proxy.php  remote.php  soa.php  soa_child.php
ideas/procpp/mixin_handler/framework/php/conf/: routes.php
ideas/procpp/mixin_handler/framework/php/controllers/: Captcha.php  Home.php  Project.php
ideas/procpp/mixin_handler/framework/php/framework/: Handler.php  composer.json  init.php  test.php
ideas/procpp/mixin_handler/framework/php/models/: App.php  Project.php
ideas/procpp/mixin_handler/framework/php/public/: index.php
ideas/procpp/mixin_handler/framework/php/sql/: migrate.php
ideas/procpp/mixin_handler/jison/: Generator.js  StringStream.h  design.jison  design.txt
ideas/procpp/mixin_handler/swig/: ClientServer.i  DispatcherClientServer.i  Http.i  Proxy.i  ReactHandler.i  Remote.i  Soa.i  Socks.i  Trie.i  Websocket.i
ideas/procpp/mixin_handler/tests/: allocator.cpp  client.cpp  dispatcher.cpp  easyp2p.cpp  echo_worker.cpp  event_hook.cpp  http.cpp  http.php  http_process_worker.cpp  httpgateway.cpp  log.cpp  map.cpp  opencv.cpp  pool.cpp  proxy.cpp  proxy_worker.cpp  redis.cpp  remote.cpp  remote_worker.cpp  schedule.cpp  soa.php  soa_client.cpp  soa_client.php  soa_server.cpp  soa_server_dispatcher.cpp  socks.cpp  socks.php  socks.py  socks_worker.cpp  test.php  test.py  trie.cpp  trie.php  trie_slow.php  ucontext.cpp  udp_server.cpp  unix_server.cpp  utf8.cpp  util.cpp  watch_stdin.cpp  (+4 more)
(+181 files in other folders)
